# MandelbrotSet

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
